--- a/_config.yaml
+++ b/_config.yaml
@@ -1,5 +1,7 @@
-remote_theme: pages-themes/hacker@v0.2.0
-plugins:
-- jekyll-remote-theme
 title: dsgfn
-description: A site to host things
+description: A place to host things
+remote_theme: jekyll/minima
+plugins:
+  - jekyll-remote-theme
+minima:
+  skin: auto
